trying to fix side divs on mobile

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ html {
 }
 
 #side {
-
+  width: 45%;
 }
 
 h1 {
@@ -125,7 +125,7 @@ img {
 .radio {
   background: #454857;
   margin-top:3%;
-  max-width: 100%;
+  width: 100%;
   padding: 4px;
   border-radius: 3px;
   box-shadow: inset 0 0 0 3px rgba(35, 33, 45, 0.3);
